# email-py-sdk

./: README.md  example_usage.py  pyproject.toml
sierra_madre_email/: __init__.py  config.py
