[tool.poetry]
name = "sierra_madre_email"
version = "0.1.0"
description = "Reusable base models for Flask with SQLAlchemy"
authors = ["Alexander Ríos"]
packages = [{ include = "sierra_madre_email" }]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
